fixed images size on mobile devices in works section

--- a/src/components/Works/works.scss
+++ b/src/components/Works/works.scss
@@ -107,6 +107,12 @@
       height: 100%;
       object-fit: cover;
     }
+
+
+    @media (max-width: 767px) {
+      width: 100%;
+      height: 100%;
+    }
   }
 
   &__button {
